--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -17,7 +17,7 @@
         url('Roboto-Bold.woff2') format('woff2'),
         url('Roboto-Bold.woff') format('woff'),
         url('Roboto-Bold.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
@@ -29,7 +29,7 @@
         url('Roboto-Regular.woff2') format('woff2'),
         url('Roboto-Regular.woff') format('woff'),
         url('Roboto-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
