--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,24 +1,25 @@
 *
 	font-family: 'Roboto', sans-serif
+	
+header 
+	position: relative
+	height: 50px
 
 nav
+	position: fixed
+	width: 100%
 	height: 50px
 	background-color: #212121
+	z-index: 2
 
-a.subheader_call_number
-	display: block
-	font-size: 22px
-	font-weight: 500
-	text-align: right
-	color: #fff
-	text-decoration: none
-
-p.promo_descr
-	font-size: 18px
-	font-weight: 300
-	text-align: center
-	color: #fff
-	margin-top: 23px
+a
+	&.subheader_call_number
+		display: block
+		font-size: 22px
+		font-weight: 500
+		text-align: right
+		color: #fff
+		text-decoration: none
 
 .menu
 	display: flex
@@ -26,95 +27,86 @@ p.promo_descr
 	padding: 13px 70px
 	margin: 0
 	list-style: none
-
-.menu_item
-	border-right: 2px black dotted
-	padding-right: 28px
-	&:last-child
-		border-right: none
-
-.menu_link
-	text-decoration: none
-	font-size: 15px
-	font-weight: 300
-	text-align: left
-	color: #fff
+	.menu_item
+		border-right: 2px black dotted
+		padding-right: 28px
+		&:last-child
+			border-right: none
+	.menu_link
+		text-decoration: none
+		font-size: 15px
+		font-weight: 300
+		text-align: left
+		color: #fff
 
 .subheader
 	position: absolute
+	top: 50px
 	width: 100%
 	height: 84px
-	background-color: rgba(0, 0, 0, 0.6)
-
-.subheader_logo
-	display: block
-	margin-top: 16px
-	max-width: 100%
-
-.subheader_official
-	font-size: 13px
-	font-weight: 300
-	text-align: left
-	color: rgba(255, 255, 255, 0.5)
-
-.subheader_call_text
-	margin-top: 18px
-	font-size: 12px
-	font-weight: 300
-	text-align: right
-	color: #fff
-
-.order_call
-	margin-top: 21px
-	font-size: 14px
-	font-weight: 500
-	text-align: center
-	color: #fff
-	text-transform: uppercase
-	width: 172px
-	height: 42px
-	border-radius: 4px
-	box-shadow: inset 0px 0 0 0 rgba(0, 0, 0, 0.12)
-	border: none
-	background-image: linear-gradient(to top, #1eacc7, #4ce2ff)
-	&:hover
-		background-image: linear-gradient(to top, #137386, #297b8b)
+	background-color: rgba(0,0,0, .6)
+	.subheader_logo
+		display: block
+		margin-top: 16px
+		max-width: 100%
+	.subheader_official
+		font-size: 13px
+		font-weight: 300
+		text-align: left
+		color: rgba(255, 255, 255, 0.5)
+	.subheader_call_text
+		margin-top: 18px
+		font-size: 12px
+		font-weight: 300
+		text-align: right
+		color: #fff
+	.order_call
+		margin-top: 21px
+		font-size: 14px
+		font-weight: 500
+		text-align: center
+		color: #fff
+		text-transform: uppercase
+		width: 172px
+		height: 42px
+		border-radius: 4px
+		box-shadow: inset 0px 0 0 0 rgba(0, 0, 0, 0.12)
+		border: none
+		background-image: linear-gradient(to top, #1eacc7, #4ce2ff)
+		&:hover
+			background-image: linear-gradient(to top, #137386, #297b8b)
 
 .promo
-	background: url('../img/bg_top.jpg') top (center / cover) no-repeat
+	background: url('../img/bg_top.jpg') center (center / cover) no-repeat
 	min-height: 800px
-
-.promo_header
-	margin-top: 151px
-	font-size: 60px
-	font-weight: 700
-	text-align: center
-	color: #fff
-	margin-bottom: 0
-
-.promo_subheader
-	font-size: 36px
-	font-weight: 500
-	text-align: center
-	color: #fff
-	margin-bottom: 0
-
-.promo_send_request
-	display: block
-	width: 259px
-	height: 63px
-	margin: 118px auto 0 auto
-	box-shadow: inset 0px 0px 0 0 rgba(0, 0, 0, 0.12)
-	border: none
-	border-radius: 4px
-	background-image: linear-gradient(to top, #1eacc7, #4ce2ff)
-	font-size: 18px
-	font-weight: 300
-	text-align: center
-	color: #fff
-
-	&:hover
-		background-image: linear-gradient(to top, #115e6d, #226674)
+	.promo_header
+		margin-top: 151px
+		font-size: 60px
+		font-weight: 700
+		text-align: center
+		color: #fff
+		margin-bottom: 0
+	.promo_subheader
+		font-size: 36px
+		font-weight: 500
+		text-align: center
+		color: #fff
+		margin-bottom: 0
+	.promo_send_request
+		display: block
+		width: 259px
+		height: 63px
+		margin: 118px auto 0 auto
+		box-shadow: inset 0px 0px 0 0 rgba(0, 0, 0, 0.12)
+		border: none
+		border-radius: 4px
+		background-image: linear-gradient(to top, #1eacc7, #4ce2ff)
+		font-size: 18px
+		font-weight: 300
+		text-align: center
+		color: #fff
+		&:hover
+			background-image: linear-gradient(to top, #115e6d, #226674)
 
 .reasons
 	min-height: 900px
@@ -146,9 +138,18 @@ p
 		font-size: 15px
 		font-weight: 300
 		line-height: 21px
+		text-align: justify
+	&.promo_descr
+		font-size: 18px
+		font-weight: 300
+		text-align: center
+		color: #fff
+		margin-top: 23px
 
-.reasons .reason_item .reason_item_descr
-	width: 343px
+.reasons
+	.reason_item
+		.reason_item_descr
+			width: 343px
 
 .label
 	margin: 0 auto
@@ -160,6 +161,7 @@ p
 	font-size: 11px
 	font-weight: 300
 	text-transform: uppercase
+	text-align: center
 
 .title
 	margin-bottom: 0
@@ -169,3 +171,59 @@ p
 	font-weight: 700
 	text-transform: uppercase
 	text-align: center
+
+.subtitle
+	font-size: 17px
+	font-weight: 400
+	text-align: center
+	color: #222
+	line-height: 1.24
+
+.mobile
+	min-height: 864px
+	padding: 48px 0 80px 0
+	background: url('../img/middle_bg.jpg') center (center / cover) no-repeat
+	.row
+		margin-top: 32px
+	&_item
+		position: relative
+		width: 320px
+		height: 280px
+		margin: 0 auto
+		margin-bottom: 19px
+		padding: 92px 30px 0 30px
+		&_plus
+			display: flex
+			justify-content: center
+			align-content: center
+			position: absolute
+			padding: 6px
+			width: 26px
+			height: 26px
+			margin: 0 auto
+			left: 50%
+			transform: translateX(-50%)
+			border-radius: 100px
+			background-color: #000
+			bottom: 35px
+			cursor: pointer
+			img
+				width: 100%
+		&_subtitle
+			font-size: 24px
+			font-weight: 300
+			text-align: center
+			color: #fff
+			text-transform: uppercase
+		&_1
+			background: url('../img/mobile_features/one_touch_order.jpg') center (center / cover) no-repeat
+		&_2
+			background: url('../img/mobile_features/sure_get.jpg') center (center / cover) no-repeat
+		&_3
+			background: url('../img/mobile_features/nice_price.jpg') center (center / cover) no-repeat
+		&_4
+			background: url('../img/mobile_features/remote_cash.jpg') center (center / cover) no-repeat
+		&_5
+			background: url('../img/mobile_features/feedback.jpg') center (center / cover) no-repeat
+		&_6
+			background: url('../img/mobile_features/share_price_ride.jpg') center (center / cover) no-repeat
