--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,10 @@
+$main_blue: #1eacc7
+$main_red: #ff5656
+
 *
 	font-family: 'Roboto', sans-serif
-	
-header 
+
+header
 	position: relative
 	height: 50px
 
@@ -123,14 +126,14 @@ a
 			width: 113px
 			height: 113px
 			margin: 0 26px 0 0
-			background-color: #1eacc7
+			background-color: $main_blue
 			border-radius: 100%
 
 p
 	&.reason_item_descr_title
 		margin-bottom: 0
 		line-height: 21px
-		color: #1eacc7
+		color: $main_blue
 		font-size: 17px
 		font-weight: 400
 	&.reason_item_descr_text
@@ -162,15 +165,20 @@ p
 	font-weight: 300
 	text-transform: uppercase
 	text-align: center
+	&_white
+		background-color: #ffffff
+		color: #000000
 
 .title
 	margin-bottom: 0
-	margin-top: 38px
+	margin-top: 32px
 	color: #222222
 	font-size: 38px
 	font-weight: 700
 	text-transform: uppercase
 	text-align: center
+	&_white
+		color: #ffffff
 
 .subtitle
 	font-size: 17px
@@ -178,6 +186,8 @@ p
 	text-align: center
 	color: #222
 	line-height: 1.24
+	&_white
+		color: #ffffff
 
 .mobile
 	min-height: 864px
@@ -227,3 +237,27 @@ p
 			background: url('../img/mobile_features/feedback.jpg') center (center / cover) no-repeat
 		&_6
 			background: url('../img/mobile_features/share_price_ride.jpg') center (center / cover) no-repeat
+
+.possibilities
+	position: relative
+	min-height: 896px
+	background: url('../img/middle_bg.jpg') center (center / cover) no-repeat
+	z-index: -1
+	padding: 57px 0 138px 0
+	&_bg_black
+		position: absolute
+		background-color: #070716
+		height: 499px
+		width: 100%
+		z-index: -1
+		left: 0
+		top: 0
+	&_img
+		display: block
+		margin: 0 auto
+		margin-top: 56px
+	&_text
+		font-size: 16px
+		font-weight: 400
+		color: #222
+		text-align: center
