--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -186,7 +186,7 @@ p
 
 .subtitle
 	font-size: 17px
-	font-weight: 400
+	font-weight: 300
 	text-align: center
 	color: #222
 	line-height: 1.24
@@ -328,3 +328,28 @@ p
 			li
 				&::before
 					background: url('../icons/red_done_icon.svg') center (center / cover) no-repeat
+
+.world
+	position: relative
+	background: url('../img/bottom_bg.jpg') center center/cover no-repeat
+	height: 717px
+	max-height: 717px
+	padding: 50px 0
+	&_link
+		display: block
+		margin-top: 486px
+		text-align: center
+		text-transform: uppercase
+		a
+			text-decoration: none
+			font-size: 15px
+			color: $main_blue
+
+footer
+	height: 148px
+	.hr_footer
+		display: block
+		border: 2px solid $main_blue
+		width: 300px
+		margin: 14px auto
+		opacity: 1
