--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -1,6 +1,3 @@
-*
-	font-family: 'Roboto', sans-serif
-
 header
 	position: relative
 	height: 50px
@@ -12,32 +9,25 @@ nav
 	background-color: #212121
 	z-index: 2
 
-a
-	&.subheader_call_number
-		display: block
-		font-size: 22px
-		font-weight: 500
-		text-align: right
-		color: #fff
-		text-decoration: none
-
 .menu
 	display: flex
 	justify-content: space-between
 	padding: 13px 70px
 	margin: 0
 	list-style: none
-	.menu_item
-		border-right: 2px black dotted
-		padding-right: 28px
-		&:last-child
-			border-right: none
-	.menu_link
-		text-decoration: none
-		font-size: 15px
-		font-weight: 300
-		text-align: left
-		color: #fff
+
+.menu_item
+	border-right: 2px black dotted
+	padding-right: 28px
+	&:last-child
+		border-right: none
+
+.menu_link
+	text-decoration: none
+	font-size: 15px
+	font-weight: 300
+	text-align: left
+	color: #fff
 
 .subheader
 	position: absolute
@@ -60,6 +50,13 @@ a
 		font-weight: 300
 		text-align: right
 		color: #fff
+	&_call_number
+		display: block
+		font-size: 22px
+		font-weight: 500
+		text-align: right
+		color: #fff
+		text-decoration: none
 	&_btn
 		margin-top: 21px
 		font-size: 14px
@@ -91,6 +88,7 @@ a
 		text-align: center
 		color: #fff
 		margin-bottom: 0
+		margin-top: 14px
 	&_btn
 		display: block
 		width: 259px
@@ -109,12 +107,14 @@ a
 .reasons
 	min-height: 900px
 	padding: 71px 0 68px 0
-	.reason_item
+	&_item
 		display: flex
 		margin-top: 35px
 		justify-content: center
 		align-items: center
-		.reason_item_round
+		&_descr
+			width: 343px
+		&_round
 			display: flex
 			justify-content: center
 			align-items: center
@@ -125,13 +125,13 @@ a
 			border-radius: 100%
 
 p
-	&.reason_item_descr_title
+	&.reasons_item_descr_title
 		margin-bottom: 0
 		line-height: 21px
 		color: $main_blue
 		font-size: 17px
 		font-weight: 400
-	&.reason_item_descr_text
+	&.reasons_item_descr_text
 		color: #202020
 		font-size: 15px
 		font-weight: 300
@@ -143,11 +143,6 @@ p
 		text-align: center
 		color: #fff
 		margin-top: 23px
-
-.reasons
-	.reason_item
-		.reason_item_descr
-			width: 343px
 
 .label
 	margin: 0 auto
@@ -277,7 +272,7 @@ p
 
 .conditions_requirements
 	min-height: 919px
-	padding: 68px 0 84px 0
+	padding: 68px 5px 84px 0
 	span
 		text-transform: uppercase
 	&_item
