--- a/src/css/style.css
+++ b/src/css/style.css
@@ -378,6 +378,7 @@ p.promo_descr {
   display: block;
   margin: 0 auto;
   margin-top: 56px;
+  width: 100%;
 }
 
 .possibilities_text {
@@ -509,7 +510,7 @@ p.promo_descr {
           justify-content: end;
 }
 
-.footer .wrapper > div .footer_social_icons {
+.footer_social_icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -517,7 +518,7 @@ p.promo_descr {
   width: 160px;
 }
 
-.footer .wrapper > div .footer_social_icons a {
+.footer_social_icons a {
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   display: -webkit-box;
@@ -539,18 +540,18 @@ p.promo_descr {
   margin: 0 7px 0 0;
 }
 
-.footer .wrapper > div .footer_social_icons a:hover {
+.footer_social_icons a:hover {
   color: #ff5656;
 }
 
-.footer .wrapper > div .footer_links {
+.footer_links {
   display: block;
   text-align: center;
-  width: 390px;
+  max-width: 390px;
   margin: 0 auto;
 }
 
-.footer .wrapper > div .footer_links_main {
+.footer_links_main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -559,7 +560,7 @@ p.promo_descr {
       justify-content: space-around;
 }
 
-.footer .wrapper > div .footer_links_main a {
+.footer_links_main a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 15px;
@@ -567,7 +568,7 @@ p.promo_descr {
   color: #070716;
 }
 
-.footer .wrapper > div .footer_links_sublinks {
+.footer_links_sublinks {
   margin-top: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -578,7 +579,7 @@ p.promo_descr {
           justify-content: space-between;
 }
 
-.footer .wrapper > div .footer_links_sublinks a {
+.footer_links_sublinks a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 11px;
@@ -586,7 +587,7 @@ p.promo_descr {
   color: #999;
 }
 
-.footer .wrapper > div .footer_links_stores {
+.footer_links_stores {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -594,7 +595,7 @@ p.promo_descr {
       align-content: end;
 }
 
-.footer .wrapper > div .footer_links_stores a {
+.footer_links_stores a {
   margin: 0 5px;
 }
 
@@ -611,7 +612,7 @@ p.promo_descr {
   color: #1eacc7;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
   .menu_item {
     padding-right: 20px;
   }
@@ -625,6 +626,18 @@ p.promo_descr {
   }
   .reasons_item_descr {
     width: 320px;
+  }
+  .mobile_item {
+    width: 300px;
+  }
+  .footer_links_stores {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer_links_stores a {
+    margin: 0 5px 10px 5px;
   }
 }
 
@@ -642,6 +655,9 @@ p.promo_descr {
   }
   .mobile_item {
     width: 300px;
+  }
+  .footer_links_sublinks a {
+    font-size: 10px;
   }
 }
 
@@ -679,6 +695,30 @@ p.promo_descr {
   }
   .reasons_item_descr {
     margin-top: 18px;
+  }
+  .conditions_requirements_item {
+    width: 100%;
+  }
+  .conditions_requirements_item ul {
+    font-size: 22px;
+  }
+  .footer_links_main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer_links_main a {
+    font-size: 18px;
+  }
+  .footer_links_sublinks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer_links_sublinks a {
+    font-size: 14px;
   }
 }
 
